--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 
 <head>
 <meta http-equiv=Content-Type content="text/html; charset=utf-8">
@@ -154,6 +154,12 @@ div.WordSection1
   <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:"Microsoft YaHei UI",sans-serif'><a
   href="https://kkkkxxxx.github.io/spin%20lock%EF%BC%88%E8%87%AA%E6%97%8B%E9%94%81%EF%BC%89.htm">spin
   lock<span lang=EN-US><span lang=EN-US>（自旋锁）</span></span></a></span></p>
+
+  <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:"Microsoft YaHei UI",sans-serif'>&nbsp;</span></p>
+  <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:"Microsoft YaHei UI",sans-serif'><a
+  href="https://kkkkxxxx.github.io/android%E7%B3%BB%E7%BB%9F%E8%B7%91%E7%BA%AFC%E7%A8%8B%E5%BA%8F.htm"><span
+  lang=EN-US><span lang=EN-US>android系统跑纯C程序</span></span></a></span></p>
+
   <p class=MsoNormal><span lang=EN-US style='font-size:12.0pt;font-family:"Microsoft YaHei UI",sans-serif'>&nbsp;</span></p>
   </td>
  </tr>
